# Bignum

./: Bignum.cpp  Bignum.hpp  CMakeLists.txt  README.md  gmon.out  main.cpp  profile.txt  test.cpp
gprof_outputs/: d_after_idea3.txt  d_afterchangediv.txt  e_after_idea3.txt  e_afterchangediv.txt  eidea4.txt  profile_d.txt  profile_encrypt.txt
